--- a/chatapp/package.json
+++ b/chatapp/package.json
@@ -9,10 +9,12 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "firebase": "^9.21.0",
+    "postcss-loader": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "resolve-url-loader": "^2.3.2",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
