--- a/chatapp/package.json
+++ b/chatapp/package.json
@@ -15,7 +15,6 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "resolve-url-loader": "^2.3.2",
-    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
